classDiagram
    direction TB

    class DB {
        -str db_path
        -Connection connection
        +connect() Connection
        +get_schema() dict
        +get_table_info(table_name: str) dict
        +execute(query: str) list
        +close() void
    }

    class AbstractAgent {
        <<abstract>>
        #str model
        #int max_retries
        +process(user_input: str)* dict
    }

    class DBAgent {
        -DB db
        -DocsSkill docs_skill
        -SQLSkill sql_skill
        -DataSkill data_skill
        -list conversation_history
        +process(user_input: str) dict
        -_call_llm(prompt: str, context: str) str
        -_retry_loop(question: str, context: str, error: str) dict
    }

    class AbstractSkill {
        <<abstract>>
        +execute(input: dict)* dict
    }

    class DocsSkill {
        -DB db
        +execute(input: dict) dict
        +get_relevant_docs(question: str) str
        -_get_schema_context() str
        -_get_table_descriptions() dict
    }

    class SQLSkill {
        +execute(input: dict) dict
        +validate(sql: str) bool
        +parse(sql: str) dict
        -_is_read_only(sql: str) bool
        -_sanitize(sql: str) str
    }

    class DataSkill {
        -DB db
        +execute(input: dict) dict
        +run_query(sql: str) dict
        -_format_results(rows: list, columns: list) dict
        -_handle_error(error: Exception) dict
    }

    class FastAPIApp {
        -DBAgent agent
        +POST /api/query(question: str) dict
        +WS /ws/query() void
        +GET /api/schema() dict
    }

    class Frontend {
        -WebSocket ws
        +renderChat() void
        +renderSQL(sql: str) void
        +renderTable(data: dict) void
        +renderDocs(docs: list) void
        +showStatus(step: str) void
    }

    AbstractAgent <|-- DBAgent
    AbstractSkill <|-- DocsSkill
    AbstractSkill <|-- SQLSkill
    AbstractSkill <|-- DataSkill

    DBAgent *-- DocsSkill : uses
    DBAgent *-- SQLSkill : uses
    DBAgent *-- DataSkill : uses

    DocsSkill o-- DB : reads schema
    DataSkill o-- DB : executes queries
    DBAgent o-- DB : owns

    FastAPIApp *-- DBAgent : orchestrates
    Frontend ..> FastAPIApp : WebSocket / REST